--- a/templates/taxi/car_confirm_delete.html
+++ b/templates/taxi/car_confirm_delete.html
@@ -4,7 +4,7 @@
   <h1>Delete car?</h1>
   <form action="" method="post">
     {% csrf_token %}
-
     <input type="submit" value="Yes" class="btn btn-danger">
+    <a class="btn btn-secondary" href="{% url 'taxi:car-detail' pk=car.pk %}">Cancel</a>
   </form>
 {% endblock %}
