--- a/templates/taxi/car_detail.html
+++ b/templates/taxi/car_detail.html
@@ -1,22 +1,25 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>
-    {{ car.model }}
-    <a href="{% url 'taxi:car-delete' pk=car.id %}" class="btn btn-danger link-to-page">
-      Delete
+  <h1>{{ car.model }}</h1>
+  <p><strong>Manufacturer:</strong> {{ car.manufacturer.name }}</p>
+  <h4>Drivers:</h4>
+  
+  {% if user in car.drivers.all %}
+    <a href="{% url 'taxi:car-delete-driver' pk=car.id %}" class="btn btn-danger">
+      Delete me from this car
     </a>
-
-    <a href="{% url 'taxi:car-update' pk=car.id %}" class="btn btn-secondary link-to-page">
-      Update
+  {% else %}
+    <a href="{% url 'taxi:car-assign-driver' pk=car.id %}" class="btn btn-success">
+      Assign me to this car
     </a>
-  </h1>
-  <p>Manufacturer: ({{ car.manufacturer.name }}, {{ car.manufacturer.country }})</p>
-  <h1>Drivers</h1>
-  <hr>
+  {% endif %}
+  
   <ul>
     {% for driver in car.drivers.all %}
-      <li>{{ driver.username }} ({{ driver.first_name }} {{ driver.last_name }})</li>
+      <li>{{ driver.username }}</li>
+    {% empty %}
+      <p>No drivers assigned yet.</p>
     {% endfor %}
   </ul>
 {% endblock %}
