--- a/templates/taxi/manufacturer_confirm_delete.html
+++ b/templates/taxi/manufacturer_confirm_delete.html
@@ -6,5 +6,6 @@
     {% csrf_token %}
 
     <input type="submit" value="Yes" class="btn btn-danger">
+    <a class="btn btn-secondary" href="{% url 'taxi:manufacturer-list' %}">Cancel</a>
   </form>
 {% endblock %}
